force-app/main/default/objects/BusinessDetail__c/BusinessDetail__c.object-meta.xml
<CustomObject>
    <label>Business Detail</label>
    <nameField>
        <label>Business Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Details</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>