force-app/main/default/objects/BusinessDetail__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Business Details</relationshipLabel>
    <relationshipName>Business_Unit_Details</relationshipName>
    <type>Lookup</type>
</CustomField>