force-app/main/default/objects/BusinessDetail__c/fields/AccountGroup__c.field-meta.xml
<CustomField>
    <fullName>AccountGroup__c</fullName>
    <description>Created by EB on 4/10/2017 for GEOS Sprint1
Created by EB on 4/10/2017 for CCC Sprint1</description>
    <label>Account Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>