force-app/main/default/objects/BusinessDetail__c/fields/AccountSegmentation__c.field-meta.xml
<CustomField>
    <fullName>AccountSegmentation__c</fullName>
    <description>The Customer Segmentation field has following picklist values
==&gt;CCC
Partner
Premium
Business as usual
==&gt;GEOS
Strategic
Premium
Plus
Excellence

Created by EB on 4/10/2017 for GEOS Sprint1
Created by EB on 4/10/2017 for CCC Sprint1</description>
    <label>Account Segmentation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Business as usual</fullName>
            </value>
            <value>
                <fullName>Strategic</fullName>
            </value>
            <value>
                <fullName>Plus</fullName>
            </value>
            <value>
                <fullName>Excellence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>