force-app/main/default/objects/BusinessDetail__c/fields/Banners__c.field-meta.xml
<CustomField>
    <fullName>Banners__c</fullName>
    <label>Banners</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>