force-app/main/default/objects/BusinessDetail__c/fields/Business_Risk__c.field-meta.xml
<CustomField>
    <fullName>Business_Risk__c</fullName>
    <description>Business Risk</description>
    <label>Business Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>