force-app/main/default/objects/BusinessDetail__c/fields/BusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>BusinessUnit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business</label>
    <referenceTo>Business__c</referenceTo>
    <relationshipLabel>Business Details</relationshipLabel>
    <relationshipName>Business_Details</relationshipName>
    <type>Lookup</type>
</CustomField>