force-app/main/default/objects/BusinessDetail__c/fields/Capacity2__c.field-meta.xml
<CustomField>
    <fullName>Capacity2__c</fullName>
    <description>Created by EB  for GEOS Sprint1</description>
    <label>Capacity 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>