force-app/main/default/objects/BusinessDetail__c/fields/Cargill_s_Segmentation_Class__c.field-meta.xml
<CustomField>
    <fullName>Cargill_s_Segmentation_Class__c</fullName>
    <description>Cargill&#39;s Segmentation Class</description>
    <label>Cargill&#39;s Segmentation Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cargill_Segmentation_Class</valueSetName>
    </valueSet>
</CustomField>