force-app/main/default/objects/BusinessDetail__c/fields/Credit_Rating__c.field-meta.xml
<CustomField>
    <fullName>Credit_Rating__c</fullName>
    <description>Credit Rating</description>
    <label>Credit Rating</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>