force-app/main/default/objects/BusinessDetail__c/fields/Credit_Terms_and_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Credit_Terms_and_Conditions__c</fullName>
    <description>Credit Terms and Conditions</description>
    <label>Credit Terms and Conditions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>