force-app/main/default/objects/BusinessDetail__c/fields/CurrentMarketStrategy__c.field-meta.xml
<CustomField>
    <fullName>CurrentMarketStrategy__c</fullName>
    <description>Created by EB  for GEOS on 4/18/2017 Sprint1</description>
    <label>Current Market Strategy</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>