force-app/main/default/objects/BusinessDetail__c/fields/CustomerSetupApprovalDate__c.field-meta.xml
<CustomField>
    <fullName>CustomerSetupApprovalDate__c</fullName>
    <description>Created by Heena on 4/11/2017 for CCC and GEOS Sprint1</description>
    <label>Customer Setup Approval Date</label>
    <type>Date</type>
</CustomField>