force-app/main/default/objects/BusinessDetail__c/fields/Financial_Risk__c.field-meta.xml
<CustomField>
    <fullName>Financial_Risk__c</fullName>
    <label>Financial Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Significant</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>