force-app/main/default/objects/BusinessDetail__c/fields/History__c.field-meta.xml
<CustomField>
    <fullName>History__c</fullName>
    <inlineHelpText>Allows users to enter a description of the history of customer with Cargill</inlineHelpText>
    <label>History</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>