force-app/main/default/objects/BusinessDetail__c/fields/InactiveReasons__c.field-meta.xml
<CustomField>
    <fullName>InactiveReasons__c</fullName>
    <description>This Picklist Include Following Fields,
Credit Issues
No Longer In Business
Customer Using Another Supplier
Other
Backlisted

Created by EB on 4/10/2017 for CCC Sprint1</description>
    <label>Inactive Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Issues</fullName>
            </value>
            <value>
                <fullName>No Longer In Business</fullName>
            </value>
            <value>
                <fullName>Customer Using Another Supplier</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Backlisted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>