force-app/main/default/objects/BusinessDetail__c/fields/isDistributor__c.field-meta.xml
<CustomField>
    <fullName>isDistributor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Account serves as a Distributor for the associated Business.</description>
    <inlineHelpText>Account serves as a Distributor for the associated Business.</inlineHelpText>
    <label>Distributor</label>
    <type>Checkbox</type>
</CustomField>