force-app/main/default/objects/BusinessDetail__c/fields/Key_Customer_Strategic_Initiative__c.field-meta.xml
<CustomField>
    <fullName>Key_Customer_Strategic_Initiative__c</fullName>
    <description>Key Customer Strategic Initiative</description>
    <label>Key Customer Strategic Initiative</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>