force-app/main/default/objects/BusinessDetail__c/fields/KeyStrengths__c.field-meta.xml
<CustomField>
    <fullName>KeyStrengths__c</fullName>
    <description>Created by EB  for GEOS on 4/18/2017 Sprint1</description>
    <label>Key Strengths</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>