force-app/main/default/objects/BusinessDetail__c/fields/LastProspectStatusChange__c.field-meta.xml
<CustomField>
    <fullName>LastProspectStatusChange__c</fullName>
    <description>Created by Heena on 4/13/2017 for CCC and GEOS Sprint1</description>
    <label>Last Prospect status change</label>
    <type>Date</type>
</CustomField>