force-app/main/default/objects/BusinessDetail__c/fields/Location2__c.field-meta.xml
<CustomField>
    <fullName>Location2__c</fullName>
    <description>Created by EB on 4/14/2017 for GEOS Sprint1</description>
    <label>Location 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>