force-app/main/default/objects/BusinessDetail__c/fields/Location3__c.field-meta.xml
<CustomField>
    <fullName>Location3__c</fullName>
    <description>Created by EB on 4/14/2017 for GEOS Sprint1</description>
    <label>Location 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>