force-app/main/default/objects/BusinessDetail__c/fields/Market_Presence__c.field-meta.xml
<CustomField>
    <fullName>Market_Presence__c</fullName>
    <description>Market Presence</description>
    <label>Market Presence</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>