force-app/main/default/objects/BusinessDetail__c/fields/MarketShareinProductGroup1__c.field-meta.xml
<CustomField>
    <fullName>MarketShareinProductGroup1__c</fullName>
    <description>Created for GEOS on 4/18/2017 Sprint1</description>
    <label>Market share in product group 1, %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>