force-app/main/default/objects/BusinessDetail__c/fields/Nbr_of_Dist_Ctrs_Stores__c.field-meta.xml
<CustomField>
    <fullName>Nbr_of_Dist_Ctrs_Stores__c</fullName>
    <description>Number of distribution centers/stores</description>
    <label>Nbr of Dist. Ctrs/Stores</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>