force-app/main/default/objects/BusinessDetail__c/fields/of_Plants__c.field-meta.xml
<CustomField>
    <fullName>of_Plants__c</fullName>
    <label># of Plants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>