force-app/main/default/objects/BusinessDetail__c/fields/of_Store_Sites__c.field-meta.xml
<CustomField>
    <fullName>of_Store_Sites__c</fullName>
    <label># of Store/Sites</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>