force-app/main/default/objects/BusinessDetail__c/fields/PrimaryBusinessContact__c.field-meta.xml
<CustomField>
    <fullName>PrimaryBusinessContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Business Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BusinessUnitDetails</relationshipName>
    <type>Lookup</type>
</CustomField>