force-app/main/default/objects/BusinessDetail__c/fields/Private_Brands__c.field-meta.xml
<CustomField>
    <fullName>Private_Brands__c</fullName>
    <label>Private Brands</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>