force-app/main/default/objects/BusinessDetail__c/fields/ProductGroup1__c.field-meta.xml
<CustomField>
    <fullName>ProductGroup1__c</fullName>
    <description>Created by EB  for GEOS Sprint1</description>
    <label>Product Group 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sunflower Oil</fullName>
            </value>
            <value>
                <fullName>Commodity Tropical Oils</fullName>
            </value>
            <value>
                <fullName>Value-Added Functional Fats</fullName>
            </value>
            <value>
                <fullName>HORECA oils</fullName>
            </value>
            <value>
                <fullName>Bottled Oil</fullName>
            </value>
            <value>
                <fullName>Malt</fullName>
            </value>
            <value>
                <fullName>Syrups</fullName>
            </value>
            <value>
                <fullName>Native Starch</fullName>
            </value>
            <value>
                <fullName>Modified Starch</fullName>
            </value>
            <value>
                <fullName>Corn gluten Meal</fullName>
            </value>
            <value>
                <fullName>Vital wheat gluten</fullName>
            </value>
            <value>
                <fullName>Other PFLs</fullName>
            </value>
            <value>
                <fullName>Hydrocolloids</fullName>
            </value>
            <value>
                <fullName>polyols</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>