force-app/main/default/objects/BusinessDetail__c/fields/ProductGroup2__c.field-meta.xml
<CustomField>
    <fullName>ProductGroup2__c</fullName>
    <description>Created for GEOS on 4/18/2017 Sprint1</description>
    <label>Product Group 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sunflower oil</fullName>
            </value>
            <value>
                <fullName>Commodity tropical oils</fullName>
            </value>
            <value>
                <fullName>Value-Added Functional fats</fullName>
            </value>
            <value>
                <fullName>HORECA oils</fullName>
            </value>
            <value>
                <fullName>Bottled oil</fullName>
            </value>
            <value>
                <fullName>Malt</fullName>
            </value>
            <value>
                <fullName>Syrups</fullName>
            </value>
            <value>
                <fullName>Native starch</fullName>
            </value>
            <value>
                <fullName>Modified starch</fullName>
            </value>
            <value>
                <fullName>Corn gluten meal</fullName>
            </value>
            <value>
                <fullName>Vital wheat gluten</fullName>
            </value>
            <value>
                <fullName>Other PFLs</fullName>
            </value>
            <value>
                <fullName>Hydrocolloids</fullName>
            </value>
            <value>
                <fullName>Polyols</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>