force-app/main/default/objects/BusinessDetail__c/fields/ProductGroup__c.field-meta.xml
<CustomField>
    <fullName>ProductGroup__c</fullName>
    <description>Created by Heena on 4/11/2017 for GEOS Sprint1
Replaced for BUProductLine__c. Moved from Account to Business details</description>
    <label>Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Go To Market Corporate Accounts</fullName>
            </value>
            <value>
                <fullName>Go To Market Shared Sales North America</fullName>
            </value>
            <value>
                <fullName>Go To Market Shared Shares EMEA</fullName>
            </value>
            <value>
                <fullName>Global Edible Oil Solutions North America</fullName>
            </value>
            <value>
                <fullName>Global Edible Oil Solutions Europe</fullName>
            </value>
            <value>
                <fullName>Global Edible Oil Solutions Mexico</fullName>
            </value>
            <value>
                <fullName>Global Edible Oil Solutions South America</fullName>
            </value>
            <value>
                <fullName>Global Edible Oil Solutions Venezuela</fullName>
            </value>
            <value>
                <fullName>Global Edible Oil Solutions Asia Pacific</fullName>
            </value>
            <value>
                <fullName>Global Edible Oil Solutions India</fullName>
            </value>
            <value>
                <fullName>Cargill Industrial Specialties</fullName>
            </value>
            <value>
                <fullName>Foods Brazil</fullName>
            </value>
            <value>
                <fullName>Starches &amp; Sweeteners North America</fullName>
            </value>
            <value>
                <fullName>Starches &amp; Sweeteners Europe</fullName>
            </value>
            <value>
                <fullName>Starches &amp; Sweeteners South America</fullName>
            </value>
            <value>
                <fullName>Cargill Texturizing Solutions</fullName>
            </value>
            <value>
                <fullName>Foods Middle East, Turkey, and North Africa</fullName>
            </value>
            <value>
                <fullName>Cargill Cocoa &amp; Chocolate</fullName>
            </value>
            <value>
                <fullName>Cocoa &amp; Chocolate North America</fullName>
            </value>
            <value>
                <fullName>Cocoa &amp; Chocolate Brazil</fullName>
            </value>
            <value>
                <fullName>Refined Oils Asia Pacific</fullName>
            </value>
            <value>
                <fullName>Starches &amp; Sweeteners China</fullName>
            </value>
            <value>
                <fullName>Starches &amp; Sweeteners Southeast Asia</fullName>
            </value>
            <value>
                <fullName>Toshoku</fullName>
            </value>
            <value>
                <fullName>Foods India</fullName>
            </value>
            <value>
                <fullName>Malt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>