force-app/main/default/objects/BusinessDetail__c/fields/ProductLineInterest__c.field-meta.xml
<CustomField>
    <fullName>ProductLineInterest__c</fullName>
    <description>This Product Line Interest Field contains the following picklist values,
==&gt;CCC
Chocolate
Coatings &amp; Fillings
Cocoa Butter
Cocoa Liquor
Cocoa Powder
==&gt;GEOS
Blends
Hosun
Hydro
Ines
Laurics
other
Palm
Palm Fractions
Rape
Soy
Specialities
Sun

Created by EB on 4/10/2017 for GEOS Sprint1
Created by EB on 4/10/2017 for CCC Sprint1</description>
    <label>Product Line Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chocolate</fullName>
            </value>
            <value>
                <fullName>Coatings &amp; Fillings</fullName>
            </value>
            <value>
                <fullName>Cocoa Butter</fullName>
            </value>
            <value>
                <fullName>Cocoa Liquor</fullName>
            </value>
            <value>
                <fullName>Cocoa Powder</fullName>
            </value>
            <value>
                <fullName>Blends</fullName>
            </value>
            <value>
                <fullName>Hosun</fullName>
            </value>
            <value>
                <fullName>Hydro</fullName>
            </value>
            <value>
                <fullName>Ines</fullName>
            </value>
            <value>
                <fullName>Laurics</fullName>
            </value>
            <value>
                <fullName>other</fullName>
            </value>
            <value>
                <fullName>Palm</fullName>
            </value>
            <value>
                <fullName>Palm Fractions</fullName>
            </value>
            <value>
                <fullName>Rape</fullName>
            </value>
            <value>
                <fullName>Soy</fullName>
            </value>
            <value>
                <fullName>Specialities</fullName>
            </value>
            <value>
                <fullName>Sun</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>