force-app/main/default/objects/BusinessDetail__c/fields/RelatesToCompetitor__c.field-meta.xml
<CustomField>
    <fullName>RelatesToCompetitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created by EB for CCC on 4/18/2017 Sprint1</description>
    <label>Relates to Competitor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Business Details (Relates to Competitor)</relationshipLabel>
    <relationshipName>Business_Details</relationshipName>
    <type>Lookup</type>
</CustomField>