force-app/main/default/objects/BusinessDetail__c/fields/Retail_Banners_Brands__c.field-meta.xml
<CustomField>
    <fullName>Retail_Banners_Brands__c</fullName>
    <description>Retail Banners/Brands</description>
    <label>Retail Banners/Brands</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>