force-app/main/default/objects/BusinessDetail__c/fields/SalesSupport__c.field-meta.xml
<CustomField>
    <fullName>SalesSupport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to user in SFDC.

Created by EB on 4/10/2017 for GEOS Sprint1

Created by EB on 4/10/2017 for CCC Sprint1</description>
    <label>Sales Support</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Business_Details</relationshipName>
    <type>Lookup</type>
</CustomField>