force-app/main/default/objects/BusinessDetail__c/fields/SalesTeamRegion__c.field-meta.xml
<CustomField>
    <fullName>SalesTeamRegion__c</fullName>
    <description>This Sales team region picklist field has following values,
BE / FR
Bio-Energy
Danone
ES Team
FS France
Feed
FS Iberia
NL Team
Pepsico
PLM
RFS Germany &amp; East EU
RFS Key Account
RFs West EU
Team 21
Technical Applications
Uk / Ireland
Unilever

Created by EB on 4/10/2017 for GEOS Sprint1</description>
    <label>Sales Team Region</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BE / FR</fullName>
            </value>
            <value>
                <fullName>Bio-Energy</fullName>
            </value>
            <value>
                <fullName>Danone</fullName>
            </value>
            <value>
                <fullName>ES Team</fullName>
            </value>
            <value>
                <fullName>FS France</fullName>
            </value>
            <value>
                <fullName>Feed</fullName>
            </value>
            <value>
                <fullName>FS Iberia</fullName>
            </value>
            <value>
                <fullName>NL Team</fullName>
            </value>
            <value>
                <fullName>Pepsico</fullName>
            </value>
            <value>
                <fullName>PLM</fullName>
            </value>
            <value>
                <fullName>RFS Germany &amp; East EU</fullName>
            </value>
            <value>
                <fullName>RFS Key Account</fullName>
            </value>
            <value>
                <fullName>RFs West EU</fullName>
            </value>
            <value>
                <fullName>Team 21</fullName>
            </value>
            <value>
                <fullName>Technical Applications</fullName>
            </value>
            <value>
                <fullName>Uk / Ireland</fullName>
            </value>
            <value>
                <fullName>Unilever</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>