force-app/main/default/objects/BusinessDetail__c/fields/TargetedMarketCategories__c.field-meta.xml
<CustomField>
    <fullName>TargetedMarketCategories__c</fullName>
    <description>Created for GEOS on 4/18/2017 Sprint1</description>
    <label>Targeted Market Categories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chocolate confectionery</fullName>
            </value>
            <value>
                <fullName>Sugar confectionery</fullName>
            </value>
            <value>
                <fullName>Dairy</fullName>
            </value>
            <value>
                <fullName>Frozen desserts</fullName>
            </value>
            <value>
                <fullName>Margarine</fullName>
            </value>
            <value>
                <fullName>Mayonnaise and sauces</fullName>
            </value>
            <value>
                <fullName>Bakery</fullName>
            </value>
            <value>
                <fullName>Convenience/Instant Food</fullName>
            </value>
            <value>
                <fullName>Snacks</fullName>
            </value>
            <value>
                <fullName>Jams, fruit preps</fullName>
            </value>
            <value>
                <fullName>Baby food</fullName>
            </value>
            <value>
                <fullName>Beer, other alcoholic beverages</fullName>
            </value>
            <value>
                <fullName>Carbonated soft drinks</fullName>
            </value>
            <value>
                <fullName>Juice, drinks, nectars</fullName>
            </value>
            <value>
                <fullName>Processed meat products</fullName>
            </value>
            <value>
                <fullName>HoReCa</fullName>
            </value>
            <value>
                <fullName>Distributor / co-packer</fullName>
            </value>
            <value>
                <fullName>Other food</fullName>
            </value>
            <value>
                <fullName>Petfood</fullName>
            </value>
            <value>
                <fullName>Feed</fullName>
            </value>
            <value>
                <fullName>Pharma</fullName>
            </value>
            <value>
                <fullName>Personal care and cosmetics</fullName>
            </value>
            <value>
                <fullName>Paper</fullName>
            </value>
            <value>
                <fullName>Corrugated board</fullName>
            </value>
            <value>
                <fullName>Construction materials</fullName>
            </value>
            <value>
                <fullName>Technical oils and lubricants</fullName>
            </value>
            <value>
                <fullName>Bio-chemical industry</fullName>
            </value>
            <value>
                <fullName>Other non-food</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>