force-app/main/default/objects/BusinessDetail__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>This Type picklist field consists of following picklist values,
==&gt;CCC
Agent
Direct Customer
Distributor
Gourmet Distributor
Indirect Customer via Agent
Inside Sales
Intercompany
==&gt;GEOS
Agent
Broker
Buyer
Direct Customer
Distributor
Receiver

Created by EB on 4/10/2017 for GEOS Sprint1
Created by EB on 4/10/2017 for CCC Sprint1</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Direct Customer</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Gourmet Distributor</fullName>
            </value>
            <value>
                <fullName>Indirect Customer via Agent</fullName>
            </value>
            <value>
                <fullName>Inside Sales</fullName>
            </value>
            <value>
                <fullName>Intercompany</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Buyer</fullName>
            </value>
            <value>
                <fullName>Receiver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>