force-app/main/default/objects/BusinessDetail__c/fields/Voice_of_the_Customer__c.field-meta.xml
<CustomField>
    <fullName>Voice_of_the_Customer__c</fullName>
    <inlineHelpText>Allows the users to enter description or details about how Cargill is performing with the customer and any performance feedback that has been received.</inlineHelpText>
    <label>Voice of the Customer</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>